[gd_scene load_steps=10 format=3 uid="uid://uyvhu153r61e"]

[ext_resource type="Script" path="res://Character/Player/main_player.gd" id="1_vcbdw"]
[ext_resource type="Texture2D" uid="uid://qkyig53lx6ma" path="res://Art/Sprite16/player_animation.png" id="2_8r8sx"]
[ext_resource type="PackedScene" uid="uid://c161anki8ua2t" path="res://Character/Player/watering_can.tscn" id="2_bxkwo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4ch1"]
size = Vector2(9, 2)

[sub_resource type="Animation" id="Animation_mgyvl"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.175, 0.35, 0.525),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WateringCan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(7, -3), Vector2(7, -4), Vector2(7, -5), Vector2(7, -4)]
}

[sub_resource type="Animation" id="Animation_2vhw0"]
resource_name = "walk"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.175, 0.35, 0.525),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 6, 5, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WateringCan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(8, -6), Vector2(8, -4)]
}

[sub_resource type="Animation" id="Animation_70s1f"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_keo1s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WateringCan:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4teeg"]
_data = {
"RESET": SubResource("Animation_keo1s"),
"idle": SubResource("Animation_mgyvl"),
"roll": SubResource("Animation_70s1f"),
"walk": SubResource("Animation_2vhw0")
}

[node name="MainPlayer" type="CharacterBody2D"]
script = ExtResource("1_vcbdw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -8)
rotation = 6.28319
texture = ExtResource("2_8r8sx")
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_j4ch1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4teeg")
}

[node name="WateringCan" parent="." instance=ExtResource("2_bxkwo")]
position = Vector2(8, -6)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
